--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
     "php": "^8.1",
     "reasno/fastmongo": "dev-master",
     "hyperf/gotask": "v3.0.1",
+    "hyperf/redis": "~3.0.0",
+    "hyperf/elasticsearch": "^3.0",
     "ext-mongodb": "*"
   }
 }
